More getPosition() tests

--- a/test/position.html
+++ b/test/position.html
@@ -20,6 +20,7 @@
 
     <style>
     	body, html {
+    		height: 120%;
     		margin: 0;
     		padding: 0;
     	}
@@ -63,6 +64,18 @@
 			margin: 50px;
     		width: 150px;
     	}
+    	
+    	#four {
+    		background: yellow;
+    		height: 150px;
+    		left: 220px;
+    		position: fixed;
+    		top: 20px;
+    		width: 150px;
+    	}
+    		#four p {
+    			color: black;
+    		}
 	</style>
 </head>
 <body>
@@ -86,6 +99,12 @@
 				margin: 50px<br />
 				width: 150px<br />
 				(top: 50, left: screen - 200)
+			</p>
+		</div>
+		<div id="four">
+			<p>
+				position: fixed<br />
+				(top: 20, left: 220)
 			</p>
 		</div>
 	</div>
