Add traversal, with all methods from 1.x. It doesn't support selectors

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
 
 	<ul>
 		<li><a href="/attributes.html">attributes</a></li>
+		<li><a href="/traversal.html">traversal</a></li>
 	</li>
 
 </body>
