Updating scroll tests

--- a/test/scroll.html
+++ b/test/scroll.html
@@ -51,11 +51,11 @@
     		}
 
     	#two {
-    		background: red;
+    		background: blue;
     		float: left;
     		height: 150px;
 			margin: 50px;
-			overflow: auto;
+			overflow: hidden;
     		width: 150px;
     	}
     		#two .inner {
@@ -66,6 +66,31 @@
     			margin-top: 50px;
     			width: 146px;
     		}
+
+    	#three {
+    		background: green;
+    		float: left;
+    		height: 150px;
+			margin: 50px;
+			overflow: auto;
+    		width: 150px;
+    	}
+    		#three .inner {
+    			background: black;
+    			border: 2px dashed white;
+    			height: 146px;
+    			margin-left: 50px;
+    			margin-top: 50px;
+    			width: 146px;
+    		}
+    		
+    	#four {
+    		background: yellow;
+    		float: left;
+    		height: 150px;
+    		margin: 50px;
+    		width: 150px;
+    	}
 	</style>
 </head>
 <body>
@@ -77,6 +102,10 @@
 		<div id="two">
 			<div class="inner"></div>
 		</div>
+		<div id="three">
+			<div class="inner"></div>
+		</div>
+		<div id="four"></div>
 	</div>
 	
 	<!-- Output -->
