--- a/test/scroll.html
+++ b/test/scroll.html
@@ -19,78 +19,79 @@
     <script src="test.dimensions.scroll.js" type="text/javascript"></script>
 
     <style>
-    	#tests {
-    		min-height: 1px;
-    	}
-    		#tests p {
-    			color: white;
-    			font: bold 12px/20px Helvetica, Arial, sans-serif;
-    			padding-top: 10px;
-    			text-align: center;
-    		}
-    	#tests:after {
-    		clear: both;
-    		content: "";
-    		display: table;
-    	}
+		#tests {
+			min-height: 1px;
+		}
+			#tests p {
+				color: white;
+				font: bold 12px/20px Helvetica, Arial, sans-serif;
+				padding-top: 10px;
+				text-align: center;
+			}
+		#tests:after {
+			clear: both;
+			content: "";
+			display: table;
+		}
 
-    	#one {
-    		background: red;
-    		float: left;
-    		height: 150px;
+		#one {
+			background: red;
+			float: left;
+			height: 150px;
 			margin: 50px;
-    		width: 150px;
-    	}
-    		#one .inner {
-    			background: black;
-    			border: 2px dashed white;
-    			height: 146px;
-    			margin-left: 50px;
-    			margin-top: 50px;
-    			width: 146px;
-    		}
+			overflow: visible;
+			width: 150px;
+		}
+			#one .inner {
+				background: black;
+				border: 2px dashed white;
+				height: 146px;
+				margin-left: 50px;
+				margin-top: 50px;
+				width: 146px;
+			}
 
-    	#two {
-    		background: blue;
-    		float: left;
-    		height: 150px;
+		#two {
+			background: blue;
+			float: left;
+			height: 150px;
 			margin: 50px;
 			overflow: hidden;
-    		width: 150px;
-    	}
-    		#two .inner {
-    			background: black;
-    			border: 2px dashed white;
-    			height: 146px;
-    			margin-left: 50px;
-    			margin-top: 50px;
-    			width: 146px;
-    		}
+			width: 150px;
+		}    	
+			#two .inner {
+				background: black;
+				border: 2px dashed white;
+				height: 146px;
+				margin-left: 50px;
+				margin-top: 50px;
+				width: 146px;
+			}
 
-    	#three {
-    		background: green;
-    		float: left;
-    		height: 150px;
+		#three {
+			background: green;
+			float: left;
+			height: 150px;
 			margin: 50px;
 			overflow: auto;
-    		width: 150px;
-    	}
-    		#three .inner {
-    			background: black;
-    			border: 2px dashed white;
-    			height: 146px;
-    			margin-left: 50px;
-    			margin-top: 50px;
-    			width: 146px;
-    		}
-    		
-    	#four {
-    		background: yellow;
-    		float: left;
-    		height: 150px;
-    		margin: 50px;
-    		width: 150px;
-    	}
+			width: 150px;
+		}
+			#three .inner {
+				background: black;
+				border: 2px dashed white;
+				height: 146px;
+				margin-left: 50px;
+				margin-top: 50px;
+				width: 146px;
+			}
+
+		#four {
+			background: yellow;
+			float: left;
+			height: 150px;
+			margin: 50px;
+			width: 150px;
+		}
 	</style>
 </head>
 <body>
