IE6 double margin float fix

--- a/test/position.html
+++ b/test/position.html
@@ -47,6 +47,10 @@
 			margin: 50px;
 			width: 150px;
 		}
+		/* IE6 double margin float bug */
+		*html #one {
+			margin-left: 25px;
+		}
 
 		#two {
 			background: blue;
@@ -63,6 +67,10 @@
 			height: 150px;
 			margin: 50px;
 			width: 150px;
+		}
+		/* IE6 double margin float bug */
+		*html #three {
+			margin-right: 25px;
 		}
 
 		#four {
