--- a/test/scroll.html
+++ b/test/scroll.html
@@ -20,6 +20,12 @@
     <script src="test.dimensions.scroll.js" type="text/javascript"></script>
 
     <style>
+		html, body {
+			height: 140%;
+			margin: 0;
+			padding: 0;
+		}
+
 		#tests {
 			min-height: 1px;
 		}
