Adding tests for Nodes
Adding tests for Nodes
correct lib/insertion.js to adhere to standard (and fixes
insertBefore/replaceChild)

--- a/test/index.html
+++ b/test/index.html
@@ -3,12 +3,29 @@
 <head>
 	<meta charset="utf-8">
 	<title>Nodes Tests</title>
+    <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
+    <style>
+        li{
+            list-style-type: none;
+            border-left: 8px solid #b0c4de;
+            border-bottom:1px solid #b0c4de;
+            padding-left: 1em;
+            margin-bottom: 0.1em;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
 
 	<ul>
-		<li><a href="/attributes.html">attributes</a></li>
-	</li>
+        <li><a href="/nodes.html">nodes</a></li>
+        <li><a href="/attributes.html">attributes</a></li>
+        <li><a href="/insertion.html">insertion</a></li>
+        <li><a href="/events.html">events</a></li>
+        <li><a href="/list.html">list</a></li>
+        <li><a href="/domready.html">domready</a></li>
+
+	</ul>
 
 </body>
 </html>
