--- a/test/domready.html
+++ b/test/domready.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nodes attributes tests</title>
+    <title>Nodes domready tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="mocha.js" type="text/javascript"></script>
 
@@ -16,7 +16,7 @@
         }
     </script>
 
-    <script type="text/javascript" src="test.js?test/attributes"></script>
+    <script type="text/javascript" src="test.js?test/domready"></script>
 
 </head>
 <body>
