refactor Nodes -> elements
refactor Nodes -> elements

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nodes Tests</title>
+    <title>elements Tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
     <style>
         li {
@@ -18,7 +18,7 @@
 <body>
 
 <ul>
-    <li><a href="/nodes.html">nodes</a></li>
+    <li><a href="/elements.html">elements</a></li>
     <li><a href="/attributes.html">attributes</a></li>
     <li><a href="/insertion.html">insertion</a></li>
     <li><a href="/events.html">events</a></li>
