--- a/test/domready.html
+++ b/test/domready.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nodes domready tests</title>
+    <title>elements domready tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen"/>
     <script src="mocha.js" type="text/javascript"></script>
 
