--- a/test/elements.html
+++ b/test/elements.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nodes base tests</title>
+    <title>elements base tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="mocha.js" type="text/javascript"></script>
 
@@ -16,7 +16,7 @@
         }
     </script>
 
-    <script type="text/javascript" src="test.js?test/nodes"></script>
+    <script type="text/javascript" src="test.js?test/elements"></script>
 
 </head>
 <body>
