--- a/test/events.html
+++ b/test/events.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nodes events tests</title>
+    <title>elements events tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="mocha.js" type="text/javascript"></script>
 
