Use CaspjerJS for testing with headless PhantomJS, added tests for delegation

--- a/test/index.html
+++ b/test/index.html
@@ -18,12 +18,13 @@
 <body>
 
 <ul>
-    <li><a href="/elements.html">elements</a></li>
     <li><a href="/attributes.html">attributes</a></li>
-    <li><a href="/insertion.html">insertion</a></li>
-    <li><a href="/events.html">events</a></li>
-    <li><a href="/list.html">list</a></li>
+    <li><a href="/delegation.html">delegation</a></li>
     <li><a href="/domready.html">domready</a></li>
+    <li><a href="/elements.html">elements</a></li>
+    <li><a href="/events.html">events</a></li>
+    <li><a href="/insertion.html">insertion</a></li>
+    <li><a href="/list.html">list</a></li>
 </ul>
 
 </body>
