--- a/test/attributes.html
+++ b/test/attributes.html
@@ -7,6 +7,7 @@
     <script src="mocha.js" type="text/javascript"></script>
 
     <script>
+        mocha.globals(['create', '__utils__', 'ClientUtils'])
         mocha.setup('bdd')
         window.onload = function(){
             mocha.run(function(){
