--- a/test/delegation.html
+++ b/test/delegation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>elements base tests</title>
+    <title>elements delegation tests</title>
     <link href="mocha.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="mocha.js" type="text/javascript"></script>
 
@@ -17,13 +17,24 @@
         }
     </script>
 
-    <script type="text/javascript" src="test.js?test/elements"></script>
+    <script type="text/javascript" src="test.js?test/delegation"></script>
 
 </head>
 <body>
 
 <a href="/">back</a>
 <div id="mocha"></div>
+
+<div id="container">
+
+    <ul>
+        <li><a href="#" class="first">old</a></li>
+        <li><a href="#" class="second">old</a></li>
+        <li><a href="#" class="third">old</a></li>
+        <li><a href="#" class="fourth">old</a></li>
+    </ul>
+
+</div>
 
 </body>
 </html>
