Initial/stub tests for traversal. Hey @kentaromiura !

--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
     <li><a href="/elements.html">elements</a></li>
     <li><a href="/events.html">events</a></li>
     <li><a href="/insertion.html">insertion</a></li>
+    <li><a href="/traversal.html">traversal</a></li>
 </ul>
 
 </body>
