Adding some more tests for keydown/submit events

--- a/test/events.html
+++ b/test/events.html
@@ -14,5 +14,10 @@
 
 <div id="container">click me</div>
 
+<form id="form">
+    <input id="input" type="text">
+    <input id="submit" type="submit">
+</form>
+
 </body>
 </html>
