Adding traversal tests
Adding traversal tests

--- a/test/traversal.html
+++ b/test/traversal.html
@@ -21,6 +21,12 @@
     <div></div>
 </div>
 
+<div id="parent-traversal">
+    <div id="one"></div>
+    <div id="two"></div>
+    <div id="three" class="last"></div>
+</div>
+
 <!-- mocha -->
 <a href="/">back</a>
 <div id="mocha"></div>
