Add support for event flag useCapture
This passes the flag on to the addEventListener call.
Added tests for this, that run in Casper.

--- a/test/events.html
+++ b/test/events.html
@@ -13,6 +13,7 @@
 <div id="mocha"></div>
 
 <div id="container">click me</div>
+<div id="capture-container">click me (capture)</div>
 
 <form id="form">
     <input id="input" type="text">
