Add a failing test for calling parent with child selector

--- a/test/traversal.html
+++ b/test/traversal.html
@@ -21,6 +21,13 @@
     <div></div>
 </div>
 
+<div id="parent3">
+    <div id="trap"></div>
+    <div id="child1parent">
+        <div id="child1"></div>
+    </div>
+</div>
+
 <!-- mocha -->
 <a href="/">back</a>
 <div id="mocha"></div>
