break the main loop when .parent() finds a result

--- a/test/traversal.html
+++ b/test/traversal.html
@@ -28,6 +28,14 @@
     </div>
 </div>
 
+<div id="parent4">
+    <div class="child"></div>
+</div>
+
+<div id="parent5">
+    <div class="child"></div>
+</div>
+
 <!-- mocha -->
 <a href="/">back</a>
 <div id="mocha"></div>
